Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@ restricted to separate phases, leading to a race-free execution.
 
 <p>Sitar can be used for modeling discrete-event systems such as 
 computer-architectural models, communication 
-networks and discrete-time queues. 
-(Written for Linux)</p>
+networks and discrete-time queues. It is written for Linux.</p>
+
+<p>Authors: 
+Neha V. Karanjkar, IIT Bombay
+Prof. Madhav P. Desai, IIT Bombay</p>
         </section>
 
         <footer>
