Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@ computer-architectural models, communication
 networks and discrete-time queues. It is written for Linux.</p>
 
 <p>Authors: 
-Neha V. Karanjkar, IIT Bombay
-Prof. Madhav P. Desai, IIT Bombay</p>
+Neha V. Karanjkar, IIT Bombay</p>
+
+<p>Prof. Madhav P. Desai, IIT Bombay</p>
         </section>
 
         <footer>
