Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@ restricted to separate phases, leading to a race-free execution.
 computer-architectural models, communication 
 networks and discrete-time queues. It is written for Linux.</p>
 
-<p>Authors: 
-Neha V. Karanjkar, IIT Bombay</p>
+<p>Authors: </p>
 
-<p>Prof. Madhav P. Desai, IIT Bombay</p>
+<ul>
+<li>Neha V. Karanjkar, IIT Bombay</li>
+<li>Prof. Madhav P. Desai, IIT Bombay</li>
+</ul>
         </section>
 
         <footer>
